k8s/manifests/frontend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/instance: three-tier-app
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/part-of: three-tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: three-tier-app
        app.kubernetes.io/name: frontend
        app.kubernetes.io/component: frontend
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/part-of: three-tier-app
    spec:
      containers:
      - name: frontend
        image: ghcr.io/hasanashab/spring-react-devops-eks-frontend:sha-cc399c58d740077381720d14f04c83e84fb79256
        ports:
        - containerPort: 80
