k8s/manifests/frontend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/instance: three-tier-app
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/part-of: three-tier-app
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
